fix: do not modify deployment as it is live and reused elsewhere
Fixes #855

Signed-off-by: Chris Laprun <claprun@redhat.com>